Return docs on disabling class path separation.